@@ -1,4 +1,4 @@
-Denora is a open source, freeware program. However the developers have put a lot
+Denora is an open source, freeware program. However the developers have put a lot
 of time, money and effort into making the program what it is today. To many it
 simpler for users to assist or show the appreciation the development team, uses
 PayPal to accept donations. Users are not required to send anything and you can feel
@@ -20,6 +20,6 @@ this possible, please include along with your donation the name (or nickname) yo
 appear in the list as well as the company name (or IRC server) to list. 
 
 Thank you for your support,
-The Denora Dev Team
+The Denora Team
 
 
