@@ -9,9 +9,14 @@ VERSION_MAJOR="1"
 VERSION_MINOR="3"
 VERSION_PATCH="0"
 VERSION_EXTRA="SVN"
-VERSION_BUILD="79"
+VERSION_BUILD="80"
 
 # $Log$
+#
+# BUILD : 1.3.0.80 (SVN)
+# BUGS  : 411
+# NOTES : Fixes bug 411, using uint32 instead of unsigned int. Applied OUTsider patch for bug discovered by crazy 
+# when loading a second protocol module.
 #
 # BUILD : 1.3.0.79 (SVN)
 # BUGS  : 411
